@@ -3,4 +3,4 @@ OpenEye-toolkits == 2020.2.0
 mmcif >= 0.61
 rcsb.utils.io >= 0.97
 rcsb.utils.multiproc >= 0.18
-rcsb.utils.chem >= 0.55
+rcsb.utils.chem >= 0.56
